@@ -165,11 +165,6 @@
 #include <setjmp.h>
 #endif
 
-#ifdef HAVE_SSL
-#include <openssl/ssl.h>
-#include <openssl/x509.h>
-#endif
-
 /*
  * Threads management
  *
